--- a/src/index.css
+++ b/src/index.css
@@ -1,69 +1,43 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+j {
+  @apply border
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+.app {
+  @apply w-11/12 mx-auto
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+.header {
+  @apply text-7xl text-center p-10
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.card {
+  @apply border-red-500 h-40 flex flex-col justify-end relative
+  transition ease-in-out hover:-translate-y-1 hover:scale-105 duration-300 hover:shadow-2xl
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.card:hover .card-caption {
+  @apply visible border-red-500 z-20 bg-gradient-to-t  
+  from-transparent via-20% to-transparent text-xs 
+
+  via-slate-300 text-slate-900  
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.card-caption {
+  @apply invisible px-3
+}
+
+.text-unfinished {
+  @apply via-slate-900 text-slate-300
+}
+
+.card-image {
+  @apply border-red-500 overflow-hidden absolute inset-0 z-10
+}
+
+.card-image img {
+  @apply border-red-500 w-full h-full
 }
